<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DashboardActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/colorSmed"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/secretaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_book"
                android:text="@string/secretaria"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/secretaria"
                app:srcCompat="@drawable/secretaria_da_educacao" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/descricao"
                android:textColor="@android:color/black" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="4">

                <ImageButton
                    android:id="@+id/botao_arvore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_arvore"
                    android:contentDescription="@string/arvore"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_arvore" />

                <ImageButton
                    android:id="@+id/botao_musica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_musica"
                    android:contentDescription="@string/arvore"
                    android:scaleType="fitXY"
                    android:src="@drawable/musica_na_escola" />

                <ImageButton
                    android:id="@+id/botao_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_youtube"
                    android:contentDescription="@string/arvore"
                    android:scaleType="fitXY"
                    android:src="@drawable/canal_youtube" />

                <ImageButton
                    android:id="@+id/botao_secretaria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_secretaria"
                    android:contentDescription="@string/arvore"
                    android:scaleType="fitXY"
                    android:src="@drawable/secretaria_site" />


            </GridLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>